# pcoords-gui

./: CMakeLists.txt  CODING_STYLES  MANIFEST.in  Makefile  README.rst  TODO  launch_designer.py  picviz.qrc  pylintrc  setup.cfg  setup.py
PicvizGui/: aboutDialogUi.py  axisgui.py  buildgraphicDialog.py  buildgraphicDialog.ui  buildgraphicgui.py  lines.py  myScene.py  picviz.ui  selection.py  setWidthDialogUi.py  siteconfig.py
designer_plugins/: designer.py  listofplugin.py
pcoords-gui/: aboutDialog.py  aboutDialog.ui  axisgui.py  buildgraphicgui.py  defaults.py  export.py  lines.py  myScene.py  pcoords-gui.py  picviz-gui.py  selectAxisIdDialog.py  selection.py  setWidthDialog.py  setWidthDialog.ui
pcoordsgui/: Makefile  aboutDialog.py  about_dialog.py  about_dialog.ui  axisgui.py  build_graphic_dialog.py  export.py  launch_designer.py  line_graphics_item.py  lines.py  main_window.py  main_window.ui  pcoords-gui.py  pcoords_graphics_scene.py  picviz.qrc  selectAxisIdDialog.py  select_axis_id_dialog.py  selection_graphics_item.py  set_width_dialog.py  utils.py
pcoordsgui/plugins/: axiswidgetplugin.py  designer.py
pcoordsgui/widgets/: axis_widget.py  axis_widget.ui
picviz-gui/: Makefile  aboutDialog.py  picviz-gui.py  selectAxisIdDialog.py  selectAxisIdDialog.ui  selectAxisIdDialogUi.py
samples/: README  access.pgdl  splunk.pgdl
