[metadata]
name = pcoords-gui
version = 0.7
author = Sebastien Tricaud
author_email = toady@gscore.org
maintainer = Julien Miotte
maintainer_email = mike.perdide@gmail.com
keywords = pcoords, math, vizualisation, security
project_url = 'http://github.com/mike-perdide/pcoords-gui'
requires_python = >=2.7
description_file = README.rst
license = GPLv3
classifier =
    Development Status :: 1 - Alpha
    License :: OSI Approved :: GNU General Public License (GPL)
    Intended Audience :: Developers
    Programming Language :: Python

[files]
packages =
    pcoords-gui

scripts =
    pcoords-gui/pcoords-gui.py

data_files =
    pcoords-gui =
        CMakeLists.txt
        COPYING
        MANIFEST.in
        Makefile
        README.rst
        TODO
        setup.cfg
        setup.py
